// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Position / basic Above 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;Above /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic AboveLeft 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;AboveLeft /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic AboveRight 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;AboveRight /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic Below 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;Below /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic BelowLeft 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;BelowLeft /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic BelowRight 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;BelowRight /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic LeftOf 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;LeftOf /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic RightOf 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;RightOf /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target Above 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;Above /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target AboveLeft 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;AboveLeft /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target AboveRight 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;AboveRight /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target Below 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;Below /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target BelowLeft 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;BelowLeft /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target BelowRight 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;BelowRight /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target LeftOf 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;LeftOf /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / custom target RightOf 1`] = `
Array [
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid yellow",
        }
      }
    >
      &lt;RightOf /&gt;
    </div>
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / in custom portal Above 1`] = `
<div
  className={
    Object {
      "data-css-yact98": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;Above /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal AboveLeft 1`] = `
<div
  className={
    Object {
      "data-css-yact98": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;AboveLeft /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal AboveRight 1`] = `
<div
  className={
    Object {
      "data-css-yact98": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;AboveRight /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal Below 1`] = `
<div
  className={
    Object {
      "data-css-yact98": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;Below /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal BelowLeft 1`] = `
<div
  className={
    Object {
      "data-css-yact98": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;BelowLeft /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal BelowRight 1`] = `
<div
  className={
    Object {
      "data-css-yact98": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;BelowRight /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal LeftOf 1`] = `
<div
  className={
    Object {
      "data-css-yact98": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;LeftOf /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in custom portal RightOf 1`] = `
<div
  className={
    Object {
      "data-css-yact98": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    &lt;RightOf /&gt;
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Position / in scrollable container RightOf 1`] = `
<div
  className={
    Object {
      "data-css-1h4s9im": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-916a33": "",
      }
    }
  />
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    target
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-2fmxat=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>
  <div
    className={
      Object {
        "data-css-916a33": "",
      }
    }
  />
</div>
`;

exports[`Storyshots Utilities | Position / position fns above 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    above
  </div>
  <div
    data-css-2fmxat=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-s1sch4=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns aboveLeft 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    aboveLeft
  </div>
  <div
    data-css-2fmxat=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1jxkkwb=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns aboveRight 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    aboveRight
  </div>
  <div
    data-css-2fmxat=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-as9lde=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns below 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    below
  </div>
  <div
    data-css-2fmxat=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-161cv40=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns belowLeft 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    belowLeft
  </div>
  <div
    data-css-2fmxat=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1oan5ap=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns belowRight 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    belowRight
  </div>
  <div
    data-css-2fmxat=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-pnrenl=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns leftOf 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    leftOf
  </div>
  <div
    data-css-2fmxat=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1lnrdce=""
    />
  </div>
</div>
`;

exports[`Storyshots Utilities | Position / position fns rightOf 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-8l64z9": "",
      }
    }
  >
    rightOf
  </div>
  <div
    data-css-2fmxat=""
    style={
      Object {
        "position": "absolute",
      }
    }
  >
    The tip
    <div
      aria-hidden={true}
      data-css-1bzlzco=""
    />
  </div>
</div>
`;
